tests/compile-fail/value_self_for_mutable_ref.rs

extern crate auto_impl;

use auto_impl::auto_impl;


#[auto_impl(&mut)]
trait Foo {
    fn foo(self);
}
